--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Shreesks</title>
+    <title>Welcome Shreeska</title>
     <style>
        body {
     background-image: url('bg.jpg');
@@ -100,7 +100,7 @@ button:active {
 </div>
 
 <div id="mainContent" style="display:none;">
-    <h1>Oh finally you're here. Welcome Shreesks, how are you?</h1>
+    <h1>Oh finally you're here. Welcome Shreeska, how are you?</h1>
 
     <div id="buttons">
         <button onclick="notFeelingWell()">Not feeling well</button>
